--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://ndavidson4.github.io/lesson7.1",
+  "homepage": "http://nsd5240.atwebpages.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
